# BAMS_TOOL

./: .env.example  .gitignore  BLOCKERS.md  CLAUDE.md  DECISIONS.md  FOLLOWUPS.md  Makefile  README.md  TASKS.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/ai/: drawing_analyzer.py  dxf_extractor.py  json_repair.py  layer_classifier.py  pdf_extractor.py  raster_analyzer.py  run_tracer.py  spec_drawing_linker.py  spec_parser.py  symbol_detector.py
backend/ai/div23/: equipment_metadata.py  symbols.py
backend/alembic/: env.py
backend/api/: main.py
backend/core/: celery_app.py  config.py  database.py  deps.py  email.py  exceptions.py  redis_client.py  security.py  storage.py  utils.py
backend/migrations/versions/: 0001_initial_schema.py  0002_upgrade_embedding_to_vector.py  0003_add_material_run_fittings.py  0003_mep_platform_phase1.py
backend/models/: __init__.py  bid.py  bid_notes.py  closeout.py  drawing.py  equipment.py  learning.py  overhead.py  price_book.py  project.py  proposal.py  regional.py  specification.py  submittal.py  takeoff.py  trade.py  user.py
backend/modules/auth/: router.py
backend/modules/bidding/: exporter.py  router.py
backend/modules/closeout/: router.py
backend/modules/drawings/: router.py
backend/modules/drawings_ai/: router.py
backend/modules/equipment/: router.py
backend/modules/overhead/: router.py
backend/modules/price_book/: router.py
backend/modules/projects/: router.py
backend/modules/proposals/: ai_scope.py  generator.py  router.py
backend/modules/specs/: router.py  service.py
backend/modules/submittals/: router.py
backend/modules/takeoff/: router.py
backend/modules/trades/: router.py
backend/seeds/: division_23_assemblies.py  division_23_catalog.py
backend/workers/: generate_proposal.py  process_drawing.py  process_spec.py  run_takeoff.py  train_model.py
desktop/: package-lock.json  package.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
infrastructure/: Dockerfile.backend  Dockerfile.frontend
scripts/: create_minio_bucket.py  import_price_book.py  (+3 more)
(+52 files in other folders)
