[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bams-backend"
version = "0.1.0"
description = "BAMS AI — MEP Construction Management Backend"
requires-python = ">=3.11"
dependencies = [
    # API Framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pgvector>=0.3.1",
    "psycopg2-binary>=2.9.9",

    # Auth & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.2.1",

    # Task Queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.4",
    "flower>=2.0.1",

    # Object Storage
    "minio>=7.2.7",
    "boto3>=1.34.0",

    # Drawing Processing
    "PyMuPDF>=1.24.3",
    "ezdxf>=1.3.4",
    "opencv-python-headless>=4.9.0.80",
    "Pillow>=10.3.0",
    "pdfplumber>=0.11.0",
    "numpy>=1.26.4",

    # ML / AI
    "anthropic>=0.28.0",
    "ultralytics>=8.2.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "easyocr>=1.7.1",
    "scikit-learn>=1.5.0",

    # Document Generation
    "reportlab>=4.2.0",
    "openpyxl>=3.1.2",
    "jinja2>=3.1.4",
    "weasyprint>=62.0",

    # Utilities
    "python-dotenv>=1.0.1",
    "structlog>=24.1.0",
    "orjson>=3.10.3",
    "pytz>=2024.1",
    "arrow>=1.3.0",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
